# tanho.ca

./: .gitignore  README.md  config.yaml  netlify.toml  package-lock.json  package.json  post_backlog.md  tailwind.config.js
assets/css/: custom.css
config/_default/: hugo.toml  languages.en.toml  menus.en.toml  params.toml
content/: _index.md
content/R/: _index.md
content/now-archive/: 2018-11-27-now.md  2019-02-02-now.md  2019-03-01-now.md  2019-05-18-now.md  2019-06-09-now.md  2019-10-29-now.md  2020-02-17-now.md  2020-06-25-now.md  2020-07-30-now.md  2020-09-09-now.md  2020-10-04-now.md  2020-11-10-now.md  2020-12-25-now.md  2021-03-02-now.md  2021-04-02-now.md  2021-05-24-now.md  2021-07-16-now.md  2021-10-04-now.md  2021-11-15-now.md  2021-12-29-now.md  2022-04-08-now.md  2022-09-30-now.md  2022-12-29-now.md  2023-05-14-now.md  2023-08-31-now.md  2023-10-16-now.md  2023-12-30-now.md  2024-02-24-now.md  2024-05-01-now.md  2024-08-15-now.md  2024-10-21-now.md  2024-11-30-now.md  2025-01-10-now.md  2025-03-31-now.md  2025-07-25-now.md  2025-10-12-now.md  2025-11-18-now.md  2026-01-20-now.md  _index.md
content/posts/: 2020-10-15_shinyprod.md  2021-03-08_httptesting.md  _index.md  pumpkins.md
content/posts/drafts-uv_python/uv-example/: DESCRIPTION  Dockerfile  pyproject.toml
content/pumpkins/: _index.md  index.md
content/rowing/: 2018-07-04-coxie.md  2019-05-29-warmup.md  2019-07-05-regatta.md  2019-09-14-lifting.md
data/en/: author.yaml  (+1 more)
layouts/: 404.html
public/: 404.html  index.html  index.xml  sitemap.xml
static/: _redirects
toha/: config.yaml
(+308 files in other folders)
